stop line overflowing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -18,9 +18,13 @@
   @include for-phone-only {
     &:after {
       position: absolute;
-      content: url("../../assets/lines/Line1-grey-mobile.svg");
-      bottom: -12px;
-      transform: scale(0.5);
+      content: "";
+      width: 100%;
+      height: 100%;
+      background-image: url("../../assets/lines/Line1-grey-mobile.svg");
+      background-repeat: no-repeat;
+      background-position: 100% 86%;
+      background-size: 110%;
     }
   }
 
